{
    "version": 1,
    "name": "InputActions",
    "maps": [
        {
            "name": "EditingActionMap",
            "id": "65cab090-f59c-4960-8c2b-93498adcaf37",
            "actions": [
                {
                    "name": "PlayerAction",
                    "type": "Value",
                    "id": "f03c2141-58f2-4ebe-a2ad-28ea2efaeeb0",
                    "expectedControlType": "",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": true
                }
            ],
            "bindings": [
                {
                    "name": "",
                    "id": "1398a3ce-5738-41ab-af7e-c7b03f087a20",
                    "path": "<Mouse>/leftButton",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "PlayerAction",
                    "isComposite": false,
                    "isPartOfComposite": false
                }
            ]
        }
    ],
    "controlSchemes": []
}